# vim: set noexpandtab:

2013-06-07 Steve
	* Added preElectrons, preMuons, preJets vectors to SusyNtAna
	* New getBaselineObjects methods now fill the pre-object vectors above
		* Needed for the on-the-fly cleaning cuts
	* Added new methods for computing object cleaning cuts on-the-fly
		* getCleaningCuts returns a recomputing cutFlag bitword
		* hasHotSpotJet checks for hot tile jets
		* hasBadJet checks for very loose bad jets
		* hasCosmicMuon checks for cosmic flagged muon
		* hasBadMuon checks for bad muon
	* Made object vectors in object selection methods const reference

2013-06-06 Steve
	* Tagging SusyNtuple-00-00-57

2013-06-05 Steve
	* Added missing variable statements in Jet copy/assignment constructors
	* Added flags for applying object level cleaning cuts on the fly from SusyNt
		* isBadMuon and isCosmic to Muon class
		* isBadVeryLoose and isHotTile to Jet class

2013-05-24 Matt
	* Adding muon eta check for muons making sure trigger match only for 2.4 muons

2013-05-24 Anyes
	* Committing changes to TGuiUtils for PR plots

2013-05-19 Steve
	* Tagging SusyNtuple-00-00-56

2013-05-19 Steve
	* Added isSelectTau method for applying baseline tau selection
	* Added isTauBDT method for applying tau BDT cuts for each ID level
		* Used by isSelectTau and isSignalTau
	* Added TauID_none for applying no BDT selection (like container taus)

2013-05-14 Steve
	* Added dumpBaselineLeptons, dumpSignalLeptons, dumpBaselineJets, dumpSignalJets to SusyNtAna
	* Updated code for selecting both medium and tight taus
		* SusyNtAna now has m_mediumTaus and m_tightTaus
			* m_signalTaus will correspond to whichever tauID is specified to selectObjects
		* New SusyNtTools getSignalObjects and getSignalTaus methods which fill 
		  mediumTaus as well as tightTaus

2013-05-08 Steve
	* Updated default btag cut to MV1_80
	* Updated default btag SF to MV1_80
	* Updated lepton overlap dR as recommended by SUSY conveners
		* e-e overlap dR changed from 0.1 to 0.05